# dmp_ros2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
cmake/: catch2.cmake
dmp_ros2/: mesh_frame_projector.py
include/dmp_ros2/: aliases.hpp  data_preprocessor.hpp  defines.hpp.in  se3_dmp.hpp  trajectory_listener.hpp
launch/: listener.launch.py  process_demonstrations.launch.py  process_last.launch.py
private_include/commons/dmp_ros2/: plots.hpp  preprocessing.hpp  transformations.hpp
private_include/dmp_filesystem/dmp_ros2/: demonstration_handler.hpp  dmp_filesystem.hpp
src/entrypoints/: data_preprocessor.cpp  test.cpp  trajectory_listener.cpp
src/lib/: demonstration_handler.cpp  dmp_filesystem.cpp  plots.cpp  preprocessing.cpp  se3_dmp.cpp  transformations.cpp
src/nodes/: data_preprocessor.cpp  trajectory_listener.cpp
tests/: transformations.cpp
