<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dmp_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 wrapper for the dynamic movement primitives library</description>
  <maintainer email="matteo.dallevedove@unitn.it">Matteo Dalle Vedove</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- <exec_depend> TODO </exec_depend> -->

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dmp_ros2_msgs</build_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
